# Poly-Mach

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pytest.ini  requirements.txt
deploy/: setup-rust-bot.sh
deploy/backup/: backup.sh
deploy/cloudwatch/: amazon-cloudwatch-agent.json
deploy/systemd/: polymarket-bot.service  polymarket-rust-bot.service
docs/: 00_PROJECT_OVERVIEW.md  01_ARCHITECTURE.md  02_STRATEGY.md  03_API_REFERENCE.md  04_IMPLEMENTATION_PLAN.md  05_INFRASTRUCTURE.md  06_RISK_MANAGEMENT.md  07_DATA_FEEDS.md  08_MATH.md  09_COMPLETE_SETUP_GUIDE.md  10_REMAINING_WORK.md  README.md
rust-bot/: Cargo.toml  Dockerfile  PROJECT_STATUS.md
rust-bot/src/: auth.rs  config.rs  lib.rs  main.rs
rust-bot/src/api/: client.rs  errors.rs
rust-bot/src/data/: market_feed.rs  mod.rs  models.rs  odds_feed.rs  orderbook.rs  scores_feed.rs
rust-bot/src/execution/: executor.rs  mod.rs  paper.rs  paper_executor.rs
rust-bot/src/risk/: circuit_breaker.rs  exposure.rs  mod.rs  position_sizer.rs  risk_manager.rs
rust-bot/src/state/: state_manager.rs
rust-bot/src/strategies/: engine.rs  live_arbitrage.rs  market_maker.rs  mod.rs  statistical_edge.rs
rust-bot/tests/: math_tests.rs
scripts/: discover_markets.py
src/: config.py  discord_bot.py  main.py
src/api/: __init__.py  auth.py  client.py  websocket.py
tests/: test_auth.py  test_create_order_response.py  test_feeds.py  test_main_wiring.py  test_market_time.py  test_paper_executor_depth.py  test_paper_trading.py  test_risk.py  test_strategies.py  test_websocket.py
(+31 files in other folders)
