[package]
name = "polymarket-us-bot"
version = "0.1.0"
edition = "2021"
description = "High-performance Polymarket US arbitrage trading bot"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Precise decimal arithmetic (critical for financial math)
rust_decimal = { version = "1", features = ["serde-with-str", "maths"] }

# Ed25519 cryptography
ed25519-dalek = { version = "2", features = ["rand_core"] }

# Base64 encoding
base64 = "0.22"

# Datetime
chrono = { version = "0.4", features = ["serde"] }

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
dotenvy = "0.15"

# Async utilities
tokio-util = "0.7"

# Error handling
thiserror = "2"
anyhow = "1"

# Rate limiting
governor = "0.8"

# UUID generation
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
rust_decimal_macros = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release.build-override]
opt-level = 3
